add naver login except naver logout

--- a/day24/nodebird/.env
+++ b/day24/nodebird/.env
@@ -1,2 +1,4 @@
 COOKIE_SECRET=nodebirdsecret
 KAKAO_ID=5d4daf57becfd72fd9c919882552c4a6
+NAVER_CLIENT_ID=1TPPR1Wv858u3kAdX_Mf
+NAVER_CLIENT_SECRET=C_9MJAfjY1
