--- a/day25/nodebird/config/config.json
+++ b/day25/nodebird/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "root",
-    "database": "naverlogin",
+    "database": "day25",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
